sasql/tests/compile_fail/alter_rejected.rs
fn main() {
    let _ = sasql::query!("ALTER TABLE users ADD COLUMN x INT");
}
